force-app/main/default/objects/Partner_Account_Default__mdt/Partner_Account_Default__mdt.object-meta.xml
<CustomObject>
    <description>Map of account names that, when matched to a newly converted biz dev lead, will rename that new contact&apos;s account and attach the appropriate master account.  New account names are formatted as &quot;Account - Contact Name&quot;</description>
    <label>Partner Account Default</label>
    <pluralLabel>Partner Account Defaults</pluralLabel>
</CustomObject>