force-app/main/default/objects/Partner_Account_Default__mdt/fields/Account_Name_Match__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Match__c</fullName>
    <description>Leads converted with this company/account name will match against this field</description>
    <inlineHelpText>Leads converted with this company/account name will match against this field</inlineHelpText>
    <label>Account Name Match</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>