force-app/main/default/objects/Partner_Account_Default__mdt/fields/Default_Master_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Master_Account_Name__c</fullName>
    <description>Name of master account to search for</description>
    <inlineHelpText>Name of master account to search for</inlineHelpText>
    <label>Default Master Account Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>