force-app/main/default/objects/Partner_Account_Default__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Match only applies if this is checked</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>