force-app/main/default/objects/Partner_Account_Default__mdt/fields/New_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Name__c</fullName>
    <description>Changes account name displayed before &quot;-&quot;</description>
    <inlineHelpText>Changes account name displayed before &quot;-&quot;</inlineHelpText>
    <label>New Account Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>