force-app/main/default/objects/Partner_Account_Default__mdt/listViews/Better_All.listView-meta.xml
<ListView>
    <fullName>Better_All</fullName>
    <columns>Account_Name_Match__c</columns>
    <columns>Default_Master_Account_Name__c</columns>
    <columns>New_Account_Name__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>Better All</label>
    <language>en_US</language>
</ListView>